--- a/front/package.json
+++ b/front/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "dev": "next -p 3060",
-    "build": "cross-env ANALYZE=true NODE_ENV=production next build"
+    "build": "cross-env ANALYZE=true NODE_ENV=production next build",
+		"start": "cross-env NODE_ENV=production next start -p 3060"
   },
   "author": "spelar",
   "license": "ISC",
