--- a/back/package.json
+++ b/back/package.json
@@ -5,7 +5,7 @@
   "main": "app.js",
   "scripts": {
     "dev": "nodemon app",
-		"start": "node app"
+    "start": "cross-env NODE_ENV=production pm2 start app"
   },
   "author": "Sungsu Kim",
   "license": "ISC",
@@ -13,14 +13,18 @@
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
+    "cross-env": "^7.0.3",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
     "express-session": "^1.17.3",
+    "helmet": "^5.1.1",
+    "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
     "mysql2": "^2.3.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
+    "pm2": "^5.2.0",
     "sequelize": "^6.20.1",
     "sequelize-cli": "^6.4.1"
   },
