--- a/back/package.json
+++ b/back/package.json
@@ -10,6 +10,7 @@
   "author": "Sungsu Kim",
   "license": "ISC",
   "dependencies": {
+    "aws-sdk": "^2.1185.0",
     "bcrypt": "^5.0.1",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
@@ -21,6 +22,7 @@
     "hpp": "^0.2.3",
     "morgan": "^1.10.0",
     "multer": "^1.4.5-lts.1",
+    "multer-s3": "^3.0.1",
     "mysql2": "^2.3.3",
     "passport": "^0.4.1",
     "passport-local": "^1.0.0",
